--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="startScreen">
-            <h2>🔮 數字奧秘：猜測遊戲 🔮</h2>
+            <h2>🔮 猜數字遊戲 🔮</h2>
             <input type="text" id="playerName" placeholder="請輸入你的名字" autocomplete="off" />
             <button onclick="startGame()">🚀 開始遊戲</button>
         </div>
@@ -26,7 +26,7 @@
                 <button id="giveUpButton">🏳️ 放棄</button>
                 <button id="restartButton" style="display:none;">🔄 重新挑戰</button>
                 <button onclick="showLeaderboard()">🏆 查看排行榜</button>
-                <button id="answerButton">💡 顯示答案</button>
+                <button id="answerButton">看答案(測試用)</button>
             </div>
             <div class="result-area">
                 <p id="result"></p>
